[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "np_utils"
version = "0.1.0"
description = "So I don't rewrite the same code over and over and over"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "np-sheets @ git+https://github.com/EthanKato/np_sheet_utils@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["np_utils*"]

